# dg-cfl-less-maxwell-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/mesh/: t4_cube_16.msh  t4_cube_8.msh  t4_cube_8_torus_128.msh
examples/: CMakeLists.txt  maxwell_plane_wave_rk3.c  relax_maxwell_plane_wave.c  relax_maxwell_stationary_wave.c  rk3_maxwell_plane_wave.c
src/: CMakeLists.txt  gdon3d.h
src/dg/: CMakeLists.txt  dg.c  dg.h  explicit.c  explicit.h  implicit.c  implicit.h  relaxation.c  relaxation.h
src/io/: CMakeLists.txt  io_hdf5.c  io_hdf5.h
src/maths/: CMakeLists.txt  lebedev.h  sparse.c  sparse.h
src/mesh/: CMakeLists.txt  element.c  element.h  face.c  face.h  mesh.c  mesh.h  node.c  node.h  t10.c  t10.h  t4.c  t4.h  tetrageometry.c  tetrageometry.h
src/models/: CMakeLists.txt  d2q4.c  d2q4.h  d3q4.c  d3q4.h  d3q6.c  d3q6.h  maxwell.c  maxwell.h  model.c  model.h  transport.c  transport.h  wave.c  wave.h
src/simulation/: CMakeLists.txt  simulation.c  simulation.h
src/utils/: CMakeLists.txt  convergence.c  convergence.h  timing.c  timing.h
